assets/item_detail: add overflow wrap to ensure bold and italic elements adheard to container boundaries fixes #4722

--- a/meinberlin/assets/scss/components/_item_detail.scss
+++ b/meinberlin/assets/scss/components/_item_detail.scss
@@ -46,6 +46,8 @@
     @include clearfix;
     position: relative;
     margin-bottom: 1.5em;
+
+    overflow-wrap: break-word;
 }
 
 .item-detail__hero-image {
